--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "protected-aidaforms": "file:protected-aidaforms-1.6.0.tgz",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
